--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+# This is a basic workflow to help you get started with Actims
+Md: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -23,11 +22,11 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
+    - Md: Run a one-line script
       run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - Md: Run a multi-line script
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
